[package]
name = "dmr_hex"
version = "0.1.0"
edition = "2024"
description = "Secure generator for DMR AES hex keys"

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.29"
getrandom = "0.2"
zeroize = "1.8"
arboard = "3"
region = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
